org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g 2010-05-30 17:34:53

package org.deved.antlride.stringtemplate.internal.core.parser;

import org.deved.antlride.stringtemplate.core.model.dltk.ast.DASTStringTemplate;
import java.util.Set;
import java.util.HashSet;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

/** Recognize a single StringTemplate template text, expressions, and conditionals */
public class STParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IF", "ELSE", "ELSEIF", "ENDIF", "SUPER", "SEMI", "BANG", "ELLIPSIS", "EQUALS", "COLON", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COMMA", "DOT", "LCURLY", "RCURLY", "TEXT", "LDELIM", "RDELIM", "ID", "STRING", "WS", "PIPE", "OR", "AND", "INDENT", "NEWLINE", "AT", "END"
    };
    public static final int RBRACK=17;
    public static final int LBRACK=16;
    public static final int ELSE=5;
    public static final int ELLIPSIS=11;
    public static final int LCURLY=20;
    public static final int BANG=10;
    public static final int EQUALS=12;
    public static final int TEXT=22;
    public static final int AND=30;
    public static final int ID=25;
    public static final int EOF=-1;
    public static final int SEMI=9;
    public static final int INDENT=31;
    public static final int LPAREN=14;
    public static final int IF=4;
    public static final int ELSEIF=6;
    public static final int COLON=13;
    public static final int AT=33;
    public static final int RPAREN=15;
    public static final int WS=27;
    public static final int NEWLINE=32;
    public static final int COMMA=18;
    public static final int RCURLY=21;
    public static final int OR=29;
    public static final int ENDIF=7;
    public static final int RDELIM=24;
    public static final int PIPE=28;
    public static final int SUPER=8;
    public static final int DOT=19;
    public static final int END=34;
    public static final int LDELIM=23;
    public static final int STRING=26;

    // delegates
    // delegators


        public STParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public STParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return STParser.tokenNames; }
    public String getGrammarFileName() { return "/media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g"; }


    /** The name of the template enclosing a subtemplate or region. */
    String enclosingTemplateName;
    private Set<String> funcs = new HashSet<String>();
    List<DASTStringTemplate> statements = new ArrayList<DASTStringTemplate>();

    public List<DASTStringTemplate> getStatements() {
      return statements;
    }

    protected String text(Token token) {
      if (token == null)
        return "";
      String text = token.getText();
      return text == null ? "" : text;
    }

    protected int start(Token token) {
      return start((CommonToken) token);
    }

    protected int start(CommonToken token) {
      return token.getStartIndex();
    }

    protected int end(Token token) {
      return end((CommonToken) token);
    }

    protected int end(CommonToken token) {
      return token.getStopIndex() + 1;
    }




    // $ANTLR start "templateAndEOF"
    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:80:1: templateAndEOF : template EOF ;
    public final void templateAndEOF() throws RecognitionException {
        try {
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:81:2: ( template EOF )
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:81:4: template EOF
            {
            pushFollow(FOLLOW_template_in_templateAndEOF49);
            template();

            state._fsp--;

            match(input,EOF,FOLLOW_EOF_in_templateAndEOF51); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "templateAndEOF"


    // $ANTLR start "template"
    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:84:1: template : ( element )* ;
    public final void template() throws RecognitionException {
        try {
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:85:2: ( ( element )* )
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:85:4: ( element )*
            {
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:85:4: ( element )*
            loop1:
            do {
                int alt1=2;
                switch ( input.LA(1) ) {
                case LDELIM:
                    {
                    int LA1_2 = input.LA(2);

                    if ( (LA1_2==IF||LA1_2==SUPER||LA1_2==LPAREN||LA1_2==LBRACK||LA1_2==LCURLY||(LA1_2>=ID && LA1_2<=STRING)||LA1_2==AT) ) {
                        alt1=1;
                    }


                    }
                    break;
                case INDENT:
                    {
                    int LA1_3 = input.LA(2);

                    if ( (LA1_3==TEXT||LA1_3==NEWLINE) ) {
                        alt1=1;
                    }
                    else if ( (LA1_3==LDELIM) ) {
                        int LA1_5 = input.LA(3);

                        if ( (LA1_5==IF||LA1_5==SUPER||LA1_5==LPAREN||LA1_5==LBRACK||LA1_5==LCURLY||(LA1_5>=ID && LA1_5<=STRING)||LA1_5==AT) ) {
                            alt1=1;
                        }


                    }


                    }
                    break;
                case TEXT:
                case NEWLINE:
                    {
                    alt1=1;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:85:4: element
            	    {
            	    pushFollow(FOLLOW_element_in_template62);
            	    element();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "template"


    // $ANTLR start "element"
    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:88:1: element : ( (i= INDENT )? ifstat ({...}? NEWLINE )? | i= INDENT exprTag | exprTag | i= INDENT text | text | (i= INDENT )? region | i= INDENT NEWLINE | NEWLINE );
    public final void element() throws RecognitionException {
        CommonToken i=null;
        STParser.ifstat_return ifstat1 = null;


        try {
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:89:2: ( (i= INDENT )? ifstat ({...}? NEWLINE )? | i= INDENT exprTag | exprTag | i= INDENT text | text | (i= INDENT )? region | i= INDENT NEWLINE | NEWLINE )
            int alt5=8;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:89:4: (i= INDENT )? ifstat ({...}? NEWLINE )?
                    {
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:89:4: (i= INDENT )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==INDENT) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:89:6: i= INDENT
                            {
                            i=(CommonToken)match(input,INDENT,FOLLOW_INDENT_in_element78); 

                            }
                            break;

                    }

                    pushFollow(FOLLOW_ifstat_in_element85);
                    ifstat1=ifstat();

                    state._fsp--;

                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:92:3: ({...}? NEWLINE )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==NEWLINE) ) {
                        int LA3_1 = input.LA(2);

                        if ( (((ifstat1!=null?((CommonToken)ifstat1.start):null).getLine()!=input.LT(1).getLine())) ) {
                            alt3=1;
                        }
                    }
                    switch (alt3) {
                        case 1 :
                            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:92:5: {...}? NEWLINE
                            {
                            if ( !(((ifstat1!=null?((CommonToken)ifstat1.start):null).getLine()!=input.LT(1).getLine())) ) {
                                throw new FailedPredicateException(input, "element", "$ifstat.start.getLine()!=input.LT(1).getLine()");
                            }
                            match(input,NEWLINE,FOLLOW_NEWLINE_in_element96); 

                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:93:4: i= INDENT exprTag
                    {
                    i=(CommonToken)match(input,INDENT,FOLLOW_INDENT_in_element106); 
                    pushFollow(FOLLOW_exprTag_in_element119);
                    exprTag();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:95:4: exprTag
                    {
                    pushFollow(FOLLOW_exprTag_in_element134);
                    exprTag();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:96:4: i= INDENT text
                    {
                    i=(CommonToken)match(input,INDENT,FOLLOW_INDENT_in_element141); 
                    pushFollow(FOLLOW_text_in_element154);
                    text();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:98:4: text
                    {
                    pushFollow(FOLLOW_text_in_element172);
                    text();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:99:6: (i= INDENT )? region
                    {
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:99:6: (i= INDENT )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==INDENT) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:99:7: i= INDENT
                            {
                            i=(CommonToken)match(input,INDENT,FOLLOW_INDENT_in_element182); 

                            }
                            break;

                    }

                    pushFollow(FOLLOW_region_in_element186);
                    region();

                    state._fsp--;


                    }
                    break;
                case 7 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:100:4: i= INDENT NEWLINE
                    {
                    i=(CommonToken)match(input,INDENT,FOLLOW_INDENT_in_element200); 
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_element214); 

                    }
                    break;
                case 8 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:102:4: NEWLINE
                    {
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_element230); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "element"


    // $ANTLR start "text"
    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:105:1: text : TEXT ;
    public final void text() throws RecognitionException {
        try {
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:106:2: ( TEXT )
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:106:4: TEXT
            {
            match(input,TEXT,FOLLOW_TEXT_in_text251); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "text"


    // $ANTLR start "exprTag"
    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:109:1: exprTag : LDELIM expr ( ';' exprOptions | ) RDELIM ;
    public final void exprTag() throws RecognitionException {
        try {
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:110:2: ( LDELIM expr ( ';' exprOptions | ) RDELIM )
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:110:4: LDELIM expr ( ';' exprOptions | ) RDELIM
            {
            match(input,LDELIM,FOLLOW_LDELIM_in_exprTag262); 
            pushFollow(FOLLOW_expr_in_exprTag266);
            expr();

            state._fsp--;

            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:112:3: ( ';' exprOptions | )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==SEMI) ) {
                alt6=1;
            }
            else if ( (LA6_0==RDELIM) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:112:5: ';' exprOptions
                    {
                    match(input,SEMI,FOLLOW_SEMI_in_exprTag272); 
                    pushFollow(FOLLOW_exprOptions_in_exprTag274);
                    exprOptions();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:114:3: 
                    {
                    }
                    break;

            }

            match(input,RDELIM,FOLLOW_RDELIM_in_exprTag286); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "exprTag"


    // $ANTLR start "region"
    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:118:1: region : LDELIM '@' ID RDELIM LDELIM '@end' RDELIM ;
    public final void region() throws RecognitionException {
        try {
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:120:2: ( LDELIM '@' ID RDELIM LDELIM '@end' RDELIM )
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:120:4: LDELIM '@' ID RDELIM LDELIM '@end' RDELIM
            {
            match(input,LDELIM,FOLLOW_LDELIM_in_region299); 
            match(input,AT,FOLLOW_AT_in_region301); 
            match(input,ID,FOLLOW_ID_in_region303); 
            match(input,RDELIM,FOLLOW_RDELIM_in_region305); 
            match(input,LDELIM,FOLLOW_LDELIM_in_region309); 
            match(input,END,FOLLOW_END_in_region311); 
            match(input,RDELIM,FOLLOW_RDELIM_in_region313); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "region"


    // $ANTLR start "subtemplate"
    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:124:1: subtemplate : '{' (ids+= ID ( ',' ids+= ID )* '|' )? '}' ;
    public final void subtemplate() throws RecognitionException {
        CommonToken ids=null;
        List list_ids=null;

        try {
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:125:2: ( '{' (ids+= ID ( ',' ids+= ID )* '|' )? '}' )
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:125:4: '{' (ids+= ID ( ',' ids+= ID )* '|' )? '}'
            {
            match(input,LCURLY,FOLLOW_LCURLY_in_subtemplate325); 
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:125:8: (ids+= ID ( ',' ids+= ID )* '|' )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==ID) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:125:10: ids+= ID ( ',' ids+= ID )* '|'
                    {
                    ids=(CommonToken)match(input,ID,FOLLOW_ID_in_subtemplate331); 
                    if (list_ids==null) list_ids=new ArrayList();
                    list_ids.add(ids);

                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:125:18: ( ',' ids+= ID )*
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==COMMA) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:125:19: ',' ids+= ID
                    	    {
                    	    match(input,COMMA,FOLLOW_COMMA_in_subtemplate334); 
                    	    ids=(CommonToken)match(input,ID,FOLLOW_ID_in_subtemplate338); 
                    	    if (list_ids==null) list_ids=new ArrayList();
                    	    list_ids.add(ids);


                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);

                    match(input,PIPE,FOLLOW_PIPE_in_subtemplate342); 

                    }
                    break;

            }

            match(input,RCURLY,FOLLOW_RCURLY_in_subtemplate347); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "subtemplate"


    // $ANTLR start "addTemplateEndTokensToFollowOfTemplateRule"
    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:128:1: addTemplateEndTokensToFollowOfTemplateRule : template ( '}' | LDELIM '@end' ) ;
    public final void addTemplateEndTokensToFollowOfTemplateRule() throws RecognitionException {
        try {
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:133:44: ( template ( '}' | LDELIM '@end' ) )
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:133:46: template ( '}' | LDELIM '@end' )
            {
            pushFollow(FOLLOW_template_in_addTemplateEndTokensToFollowOfTemplateRule362);
            template();

            state._fsp--;

            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:133:55: ( '}' | LDELIM '@end' )
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==RCURLY) ) {
                alt9=1;
            }
            else if ( (LA9_0==LDELIM) ) {
                alt9=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }
            switch (alt9) {
                case 1 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:133:56: '}'
                    {
                    match(input,RCURLY,FOLLOW_RCURLY_in_addTemplateEndTokensToFollowOfTemplateRule365); 

                    }
                    break;
                case 2 :
                    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:133:60: LDELIM '@end'
                    {
                    match(input,LDELIM,FOLLOW_LDELIM_in_addTemplateEndTokensToFollowOfTemplateRule367); 
                    match(input,END,FOLLOW_END_in_addTemplateEndTokensToFollowOfTemplateRule369); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "addTemplateEndTokensToFollowOfTemplateRule"

    public static class ifstat_return extends ParserRuleReturnScope {
    };

    // $ANTLR start "ifstat"
    // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:135:1: ifstat : LDELIM 'if' '(' conditional ')' RDELIM template ( ( INDENT )? LDELIM 'elseif' '(' conditional ')' RDELIM template )* ( ( INDENT )? LDELIM 'else' RDELIM template )? ( INDENT )? endif= LDELIM 'endif' RDELIM ;
    public final STParser.ifstat_return ifstat() throws RecognitionException {
        STParser.ifstat_return retval = new STParser.ifstat_return();
        retval.start = input.LT(1);

        CommonToken endif=null;


            /** Tracks address of branch operand (in code block).  It's how
             *  we backpatch forward references when generating code for IFs.
             */
            int prevBranchOperand = -1;
            /** Branch instruction operands that are forward refs to end of IF.
             *  We need to update them once we see the endif.
             */
            List<Integer> endRefs = new ArrayList<Integer>();

        try {
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:146:2: ( LDELIM 'if' '(' conditional ')' RDELIM template ( ( INDENT )? LDELIM 'elseif' '(' conditional ')' RDELIM template )* ( ( INDENT )? LDELIM 'else' RDELIM template )? ( INDENT )? endif= LDELIM 'endif' RDELIM )
            // /media/dev/workspaces/antlride/org.deved.antlride.stringtemplate.core/src/main/java/org/deved/antlride/stringtemplate/internal/core/parser/STParser.g:146:4: LDELIM 'if' '(' conditional ')' RDELIM template ( ( INDENT )? LDELIM 'elseif' '(' conditional ')' RDELIM template )* ( ( INDENT )? LDELIM 'else' RDELIM template )? ( INDENT )? endif= LDELIM 'endif' RDELIM
            {
            match(input,LDELIM,FOLLOW_LDELIM_in_ifstat385); 
            match(input,IF,FOLLOW_IF_in_ifstat387); 
            match(input,LPAREN,FOLLOW_LPAREN_in_ifstat389); 
            pushFollow(FOLLOW_conditional_in_ifstat391);
            conditional();

            state._fsp--;
